--- a/index.html
+++ b/index.html
@@ -4,39 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<script defer src="main.1749b432167f14025c9f.js"></script></head>
+<script defer src="main.bc1a24e8b9ec557786d5.js"></script></head>
 <body>
     <header>
+        <a name="Главная"></a> 
+        <section class="navSection">
+            <div class="container navSection__container">
+                <nav class="navSection__nav">
+                    <ul class="navSection__list">
+                        <li class="navSection__item">
+                            <a href="#Главная">
+                                <p class="navSection__btn">Главная</p>
+                            </a>
+                        </li>
+                        <li class="navSection__item">
+                            <a href="#Каталог">
+                                <p class="navSection__btn">Каталог</p>
+                            </a>
+                        </li>
+                        <li class="navSection__item">
+                            <a href="#Схема работы">
+                                <p class="navSection__btn">Схема работы</p>
+                            </a>
+                        </li>
+                        <li class="navSection__item">
+                            <a href="#Оставить заявку">
+                                <p class="navSection__btn">Оставить заявку</p>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
         <section class="header">
             <div class="container header__container">
                 <div class="header__left">
-                    <img class="header__logo" src="icons/logo.77b29cc51ea1f2b7d58f.svg" alt="Logo" width="50" height="50">
+                    <img class="header__logo" src="icons/logo.4b81ca2d68e187085433.svg" alt="Logo" width="60" height="60">
                     <div class="header__sloganBlock">
-                        <h1>ЕжикTEXT</h1>
-                        <p>"ЕжикTEXT" - лучшие ткани!</p>                
+                        <h1 class="header__heading">Книга мастеров</h1>
+                        <p class="header__slogan">Лучшие ткани на рынке!</p>                
                     </div>
-                </div>
-                <div class="header__center">
-                    <p>Глвная\</p>
-                    <p>Каталог\</p>
                 </div>
                 <div class="header__right">
-                    <div class="header__right-inner header__right-inner_left">
-                        <p>E-mail для заказа</p>
-                        <div>info@egic.com</div>
+                    <div class="header__right-inner">
+                        <p class="header__text">E-mail для заказа</p>
+                        <a class="header__link" href="mailto:admin@google.com">admin@google.com</a>
                     </div>
-                    <div class="header__right-inner header__right-inner_right">
-                        <p>Телефон для заказа (Полевской)</p>
-                        <div class="header__contacts">
-                            <div>+7 343 50 2 22 22</div>
-                            <div>INST</div>
-                            <div>VK</div>
-                        </div>
+                    <div class="header__right-inner">
+                        <p class="header__text">Телефон для заказа</p>
+                        <a class="header__link" href="tel:89000000000">+7(900) 000-00-00</a>
                     </div>
-                    <div></div>
+                    <div class="header__iconsBlock">
+                        <img class="header__icon" src="icons/instagram.f9bf690924574004e8b4.svg" alt="VK" width="36" height="36">
+                        <img class="header__icon" src="icons/vk.738fd80f92fe53f1152b.svg" alt="VK" width="36" height="36">    
+                    </div>
+                    
                 </div>
             </div>
         </section>
+        
     </header>
     <main>
         <section class="first">
@@ -92,6 +118,7 @@
                         <p>Высокое качество от мировых производителей</p>
                     </li>
                 </ul>
+                <a name="Каталог"></a> 
             </div>
         </section>
         <section class="assortment">
@@ -242,6 +269,7 @@
             </div>
         </section>
         <section class="commerce">
+            <a name="Оставить заявку"></a> 
             <div class="container commerce__container">
                 <h2 class="heading commerce__heading">Почему стоит выбрать ткани "ЕжикTEXT"?</h2>
                 <p class="commerce__description">
@@ -261,6 +289,7 @@
             </div>
         </section>
         <section class="imageSection">
+            <a name="Схема работы"></a> 
             <div class="container commerce__imageSection">
                 <h2 class="heading imageSection__heading">Постоянно принимая участия и посещая выставки
                     по всему миру, мы подбираем для Вас новые ткани</h2>
