--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<script defer src="main.d1d866ce7a0d44c49e11.js"></script></head>
+<script defer src="main.8be4bf74ce2e772ae201.js"></script></head>
 <body>
     <header id="main">
         <section class="navSection">
@@ -96,7 +96,7 @@
                 <h2 class="first__title">Продажа материалов для пошива одежды</h2> 
                 <p class="first__subtitle">Ткани, фурнитура, аксессуары, шторы/карнизы, товары для рукоделия, послельные принадлежности</p>
                 <div class="first__btnsBlock">
-                    <button class="first__btn first__btn_top">Запросить оптовые цены</button>
+                    <button class="first__btn first__btn_top">Запросить цены</button>
                     <button class="first__btn first__btn_bottom">Получить коммерческое предложение</button>
                 </div>       
             </div>
@@ -616,7 +616,7 @@
                         <input type="text" class="input commerce__input" placeholder="Введите ваше имя">
                         <input type="text" class="input commerce__input" placeholder="Введите вашу электронную почту">
                     </div>
-                    <button class="button commerce__button">Запросить оптовые цены</button>
+                    <button class="button commerce__button">Запросить цены</button>
                 </div>
             </div>
         </section>
