--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,49 @@
             <div></div>
             <div></div>
         </section>
+        <section class="menuSection" id="catalog">
+            <div class="container menuSection__container">
+                <div class="menuSection__column">
+                    <div class="menuSection__row">
+                        <div class="menuSection__item">
+                            <a href="#textile" class="menuSection__link">
+                                <h4 class="menuSection__title">Ткани</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="menuSection__row">
+                        <div class="menuSection__item">
+                            <a href="#products" class="menuSection__link">
+                                <h4 class="menuSection__title">Готовые изделия</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="menuSection__column menuSection__column_middle">
+                    <div class="menuSection__item">
+                        <a href="#accessories" class="menuSection__link">
+                            <h4 class="menuSection__title">Карнизы и аксессуары</h4>
+                        </a>
+                    </div>
+                </div>
+                <div class="menuSection__column">
+                    <div class="menuSection__row">
+                        <div class="menuSection__item">
+                            <a href="#buttons" class="menuSection__link">
+                                <h4 class="menuSection__title">Фурнитура</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="menuSection__row">
+                        <div class="menuSection__item">
+                            <a href="#sewing" class="menuSection__link">
+                                <h4 class="menuSection__title">Пошив изделий</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section-swiper">
             <div class="container section-swiper__container">
                 <div class="swiper">
@@ -147,7 +190,7 @@
                   </div>
             </div>
           </section>
-        <section class="assortment" id="catalog">
+        <section class="assortment" >
             <div class="container assortment__container" id="textile">
                 <h3 class="heading assortment__heading">У нас широкий ассортимент тканей</h3>
                 <ul class="assortment__list">
